# tool-authorization-protocol

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: oss-ci.yaml
crates/agentsec-bot/: Cargo.toml
crates/agentsec-bot/src/: config.rs  lib.rs  telegram.rs
crates/agentsec-cli/: Cargo.toml
crates/agentsec-cli/src/: add.rs  agent_cmd.rs  init.rs  logs.rs  main.rs  role_cmd.rs
crates/agentsec-core/: Cargo.toml
crates/agentsec-core/src/: approval.rs  config.rs  error.rs  lib.rs  store.rs  types.rs
crates/agentsec-proxy/: Cargo.toml
crates/agentsec-proxy/src/: admin.rs  audit.rs  auth.rs  crypto.rs  db_state.rs  email.rs  forward.rs  google_oauth.rs  key_provider.rs  lib.rs  main.rs  oauth.rs  placeholder.rs  policy.rs  proxy.rs  routing.rs  safety.rs  sanitize.rs  webauthn.rs
crates/agentsec-proxy/static/: approve.html  dashboard.html  register.html
crates/agentsec-proxy/tests/: e2e.rs  integration.rs
crates/agentsec-signer/: Cargo.toml
crates/agentsec-signer/src/: main.rs
docs/: connector-matrix.md  request-cookbook.md
scripts/: telegram_sidecar.py
