[workspace]
resolver = "2"
members = [
    "crates/agentsec-core",
    "crates/agentsec-proxy",
    "crates/agentsec-bot",
    "crates/agentsec-cli",
    "crates/agentsec-signer",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
