[package]
name = "agentsec-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
agentsec-core = { path = "../agentsec-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
