[package]
name = "agentsec-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tap"
path = "src/main.rs"

[dependencies]
agentsec-core = { path = "../agentsec-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }

chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
