[package]
name = "agentsec-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
libsql = "0.9"
aes-gcm = "0.10"
rand = "0.8"
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
