[package]
name = "agentsec-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
agentsec-core = { path = "../agentsec-core" }
agentsec-bot = { path = "../agentsec-bot" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
regex = "1"
base64 = "0.22"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
hyper = "1"
async-trait = "0.1"
libsql = "0.9"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
url = "2"
argon2 = "0.5"

[features]
default = []
enclave = []  # Evervault enclave mode: key from DB via encrypt/decrypt endpoints

[dev-dependencies]
tempfile = "3"
tower = "0.5"
tokio = { workspace = true, features = ["full", "test-util"] }
