[package]
name = "agentsec-signer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentsec-signer"
path = "src/main.rs"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"
percent-encoding = "2"